testsuite/positive/identity-function.n
using System.Console;
using Nemerle.Utility;

interface IFoo {}
struct Foo : IFoo {}

module Program
{
  Main() : void
  {
    WriteLine(Identity.Instance.Equals(x => x));
    WriteLine(Identity.[int, object].Instance.Equals((x : int) => (x : object)));
    def f(x : Foo) : IFoo { x }
    WriteLine(Identity.[Foo, IFoo].Instance.Equals(f));
  }
}
/*
BEGIN-OUTPUT
True
True
True
END-OUTPUT
*/