testsuite/negative/Issue-1300.n
using Nemerle.Utility;

[Record] enum E { }           //E: The Record macro not support a enum

[Record] interface ITest { }  //E: The Record macro not support a interface

[Record] delegate F() : void; //E: The Record macro not support a delegate

[Record]                      //E: The Record macro not support a module
module Program
{
  Main() : void { }
}